yaml/NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-grafana
  namespace: loki
  labels:
    helm.sh/chart: grafana-6.21.3
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: loki
    app.kubernetes.io/version: "8.3.5"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: loki
